--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,10 @@ text-align:center;
   border-bottom: 3px solid #C6FDC4;
 }
 
+span{
+  padding: 10px;
+}
+
 .btn {
   border-width: 0;
   border-radius: 0;
